examples/test/testpolicy14999.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14999
  namespace: namespace285
spec:
  podSelector:
    matchLabels:
      key29: value12
      key16: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value47
          key19: value37
      podSelector:
        matchLabels:
          key48: value44
          key0: value2
          key34: value0
